# project_1_v2

./: .dockerignore  .env.example  .flaskenv  .gitignore  GEMINI.md  Makefile  cookies.txt  docker-compose.yml
flask-backend/: 12.xlsx  Dockerfile  README.md  excel_converter.py  filtered_data_with_header.csv  filtered_data_with_header.xlsx  pyproject.toml  requirements.txt
flask-backend/src/: entrypoint.sh
flask-backend/src/app/: __init__.py  config.py  decorators.py  extensions.py  seed.py
flask-backend/src/app/admin/: routes.py  schemas.py  services.py
flask-backend/src/app/app_management/: routes.py  schemas.py  services.py
flask-backend/src/app/markets/: models.py  repositories.py  routes.py  schemas.py  services.py
flask-backend/src/app/products/: models.py  repositories.py  routes.py  schemas.py  services.py  tasks.py
flask-backend/src/app/shelves/: models.py  repositories.py  routes.py  schemas.py  services.py
flask-backend/src/app/users/: routes_extra.py  services_extra.py
flask-backend/src/logs/: app.log.1  app.log.2  app.log.3  app.log.4  app.log.5  app.log.7  app.log.9
flask-backend/src/migrations/versions/: 789ea42fa7df_auto.py  9b289644ee2f_initial_migration.py  d4c86c803ece_inintial_migration.py
flask-backend/tests/: conftest.py  test_auth.py  test_products.py  test_shelves.py
flask-backend/tests/unit/: test_product_tasks.py
react-frontend/: 192.168.188.245+1-key.pem  192.168.188.245+1.pem  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
react-frontend/src/: App.jsx  index.css  theme.js
(+42 files in other folders)
